--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ html {
 #slider {
     margin-top:46px;
     padding-top:50%;
-    background: url('/f8-theband/assets/img/slider1.jpg') top center / cover no-repeat;
+    background: url('https://trannguyenvu3482.github.io/TheBandF8/assets/img/bandmember.jpg') top center / cover no-repeat;
     position: relative;
 }
 
