--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ html {
     top:0;
     left:0;
     right:0;
+    z-index:1;
 }
 
 #nav .nav-arrow-down {
@@ -112,7 +113,7 @@ html {
 #slider {
     margin-top:46px;
     padding-top:50%;
-    background: url('/f8-theband/assets/img/slider1.jpg') top center / cover no-repeat;
+    background: url('https://trannguyenvu3482.github.io/TheBandF8/assets/img/slider1.jpg') top center / cover no-repeat;
     position: relative;
 }
 
