--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,81 @@
 
 }
 
+/* Common */
 html {
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
 }
+
+.text-white {
+  color:#fff !important;
+}
+
+.text-center {
+    text-align: center !important;
+}
+
+.pull-right {
+    float: right !important;
+}
+
+.btn {
+    padding: 11px 16px;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 15px;
+    cursor: pointer;
+    border: none;
+  }
+  
+  .btn:hover {
+    color: #000;
+    background-color: #ccc;
+  }
+
+.clear {
+  clear: both;
+}
+
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+.row::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.col {
+    float: left;
+    padding: 0 8px;
+}
+
+.col-half {
+    width: 50%;
+}
+
+.col-third {
+    width:33.3333%;
+}
+
+.col-full {
+    width: 100%;
+}
+
+.mt-8 {
+    margin-top: 8px !important;
+}
+
+.mt-16 {
+    margin-top: 16px !important;
+}
+
+/* Main */
 
 #main {
 
@@ -28,7 +100,7 @@ html {
     top:0;
     left:0;
     right:0;
-    z-index:1;
+    z-index: 1;
 }
 
 #nav .nav-arrow-down {
@@ -113,7 +185,7 @@ html {
 #slider {
     margin-top:46px;
     padding-top:50%;
-    background: url('https://trannguyenvu3482.github.io/TheBandF8/assets/img/slider1.jpg') top center / cover no-repeat;
+    background: url('/f8-theband/assets/img/slider1.jpg') top center / cover no-repeat;
     position: relative;
 }
 
@@ -137,101 +209,282 @@ html {
 
 #content {
 
-
 }
 
 #content .content-section {
-    width:800px;
-    margin-left:auto;
-    margin-right:auto;
-    padding:64px 0;
-}
-#content .section-heading {
-    font-size: 30px;
-    font-weight: 500;
-    letter-spacing: 4px;
-    text-align: center;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 64px 0 112px;
 }
 
-#content .section-sub-heading {
-    font-size: 15px;
-    text-align: center;
-    margin-top: 25px;
-    font-style: italic;
-    opacity: 0.6;
+#content .section-heading {
+  text-align: center;
+  font-weight: 300;
+  font-size: 30px;
+  letter-spacing: 4px;
+}
+
+#content .section-subheading {
+  text-align:center;
+  font-size: 15px;
+  margin: 25px 0;
+  font-style: italic;
+  opacity: 0.5;
 }
 
 #content .about-text {
-    text-align: justify;
-    font-size: 15px;
-    margin-top: 25px;
-    line-height: 1.4;
+  text-align: justify;
+  font-size: 15px;
+  line-height: 1.4;
 }
 
 #content .member-list {
-    margin-top:48px;
+    margin-top: 48px;
     overflow: hidden;
 }
 
-#content .member-item {
-    float:left;
-    width: 33.3333%;
-    text-align: center;
-}
-
 #content .member-name {
-    font-size: 15px;
-
-
+  font-size: 15px;
 }
 
 #content .member-img {
-    width: 154px;
-    margin-top: 15px;
-    text-align:center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 4px;
+  margin-top: 15px;
+  width: 154px;
+  border-radius: 4px;
 }
 
-/* Tour Section */
-
+/* Tour section */
 .tour-section {
-    background-color: #000;
+  background: #000;
 }
 
-.ticket-list {
-    background-color: #fff;
+.tickets-list {
+  background-color: #fff;
+  margin-top: 40px;
 }
 
-.ticket-list li {
-    font-size:15px;
-    padding:11px 16px;
-    border-bottom: 1px solid #ddd;
-    color:#757575;
-    list-style: none;
+.tickets-list li {
+  font-size: 15px;
+  padding: 11px 16px;
+  border-bottom: 1px solid #ddd;
+  color: #757575;
+  list-style: none;
 }
 
-.ticket-list .soldout {
-    background-color: #f44336;
-    color: #fff;
-    padding: 3px 4px;
-    margin-left: 16px;
+.tickets-list .soldout {
+  background-color: #f44336;
+  color: #fff;
+  padding: 3px 4px;
+  margin-left: 16px;
 }
 
-.ticket-list .quantity {
-    background-color: #000;
-    color: #fff;
-    float: right;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 24px;
-    margin-top: -3px;
+.tickets-list .quantity {
+  background-color: black;
+  color: white;
+  float: right;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  text-align: center;
+  line-height: 24px;
+  margin-top: -3px;
+}
+/* Places */
+.places-list {
+  margin-top: 32px;
 }
 
+.places-img {
+  width: 100%;
+  display: block;
+}
+
+.places-img:hover {
+  opacity: 0.6;
+
+}
+
+.place-body {
+  background-color: #fff;
+  padding: 16px;
+  font-size: 15px;
+}
+.place-heading {
+  font-size: 15px;
+}
+.place-time {
+  margin-top: 15px;
+  color: #757575;
+}
+.place-desc {
+  margin-top: 15px;
+  line-height: 1.4;
+}
+
+/* Contact form */
+.contact-content {
+    margin-top: 48px;
+}
+
+.contact-info {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.contact-info i[class*="ti-"] {
+    width: 30px;
+    display: inline-block;
+}
+
+.contact-form {
+    font-size: 15px;
+}
+
+.contact-form .form-control {
+    padding: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+/* Footer section */
 #footer {
+    padding: 64px 16px;
+    text-align: center;
+}
 
+.socials-list {
+    font-size: 24px;
+}
+
+.socials-list a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.socials-list a:hover,
+#footer .copyright a:hover {
+    color: rgba(0, 0, 0, 0.4);
+}
+
+#footer .copyright {
+    margin-top: 15px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+#footer .copyright a {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.map-section img {
+    width: 100%;
+}
+
+/* Modal section */
+.modal {
+  position:fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.modal.open {
+  display: flex;
+}
+
+.modal-container {
+  background-color: #fff;
+  width: 900px;
+  max-width: calc(100% - 32px);
+  min-height: 200px;
+  position: relative;
+  animation: modalFadeIn ease .5s;
+}
+
+.modal-header {
+  background: #009688;
+  height: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #fff;
+  letter-spacing: 2px;
+}
+
+.modal-heading-icon {
+  margin-right: 16px;
+}
+
+.modal-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #fff;
+  padding: 12px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.modal-close:hover {
+  opacity: 1;
+  
+}
+
+.modal-body {
+  padding: 16px;
+}
+
+.modal-label {
+  display: block;
+  font-size: 15px;
+  margin-bottom: 12px;
+}
+
+.modal-input {
+  border: 1px solid #ccc;
+  width: 100%;
+  padding: 10px;
+  font-size: 15px;
+  margin-bottom: 24px;
+}
+
+#buy-tickets {
+  background: #009688;
+  border: none;
+  color: white;
+  width: 100%;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding: 18px;
+  cursor: pointer;
+}
+
+#buy-tickets:hover {
+  opacity: 0.9;
+}
+
+.modal-footer {
+  padding: 16px;
+  text-align: right;
+}
+
+.modal-footer a {
+  color: #2196F3;
+}
+
+@keyframes modalFadeIn {
+    from {
+        transform:translateY(-140px);
+        opacity: 0;
+    }
+    to {
+        transform:translateY(0px);
+        opacity: 1;
+    }
 }
