Add responsive.css file and improve site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,7 @@ html {
     left:0;
     right:0;
     z-index: 1;
+    overflow: hidden;
 }
 
 #nav .nav-arrow-down {
@@ -165,18 +166,28 @@ html {
     line-height: 38px;
 }
 
-#header .search-btn {
+#header .search-btn,
+#header .mobile-menu-btn {
     float: right;
     line-height:46px;
 
 }
 
-#header .search-btn:hover {
+#header .search-btn:hover{
     background-color: #f44336;
     cursor:pointer;
 }
 
-#header .search-icon {
+#header .mobile-menu-btn:hover{
+    background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon{
+    color: #000;
+}
+
+#header .search-icon,
+#header .menu-icon {
     color:#fff;
     font-size:14px;
     padding:0 24px;
@@ -213,9 +224,12 @@ html {
 
 #content .content-section {
   width: 800px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 64px 0 112px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 #content .section-heading {
