--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,9 @@ html {
     margin-top: 15px;
     cursor: pointer;
     border: none;
+    text-align: center;
+    -webkit-appearance: none;
+    appearance: none;
   }
   
   .btn:hover {
@@ -79,6 +82,11 @@ html {
     margin-top: 16px !important;
 }
 
+.mt-32 {
+  margin-top: 32px !important;
+}
+
+
 /* Main */
 
 #main {
@@ -101,7 +109,6 @@ html {
     left:0;
     right:0;
     z-index: 1;
-    overflow: hidden;
 }
 
 #nav .nav-arrow-down {
@@ -170,7 +177,12 @@ html {
 #header .mobile-menu-btn {
     float: right;
     line-height:46px;
+}
 
+#header .mobile-menu-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 #header .search-btn:hover{
@@ -196,7 +208,7 @@ html {
 #slider {
     margin-top:46px;
     padding-top:50%;
-    background: url('/f8-theband/assets/img/slider1.jpg') top center / cover no-repeat;
+    background: url('../img/slider1.jpg') top center / cover no-repeat;
     position: relative;
 }
 
@@ -216,6 +228,7 @@ html {
 
 #slider .text-subheading {
     font-size:15px;
+    text-shadow: 0 0 2px #000;
 }
 
 #content {
@@ -254,7 +267,7 @@ html {
 }
 
 #content .member-list {
-    margin-top: 48px;
+    margin-top: 32px;
     overflow: hidden;
 }
 
@@ -306,7 +319,7 @@ html {
 }
 /* Places */
 .places-list {
-  margin-top: 32px;
+  margin-top: 16px;
 }
 
 .places-img {
@@ -347,8 +360,17 @@ html {
 }
 
 .contact-info i[class*="ti-"] {
-    width: 30px;
-    display: inline-block;
+  width: 30px;
+  display: inline-block;
+}
+
+.contact-info a {
+  color: #101aef;
+  opacity: 0.8;
+}
+
+.contact-info a:hover {
+  opacity: 1;
 }
 
 .contact-form {
